[package]
name = "rocketapi"
version = "0.1.0"
description = "API Server with api key access and access control lists"
readme = "README.md"
license = " Apache-2.0 License"
repository = "https://github.com/marirs/rocketapi"
homepage = "https://github.com/marirs/rocketapi"
keywords = [
    "api", "server", "web", "access control list", "acl", "user management",
    "api management", "mongodb", "rocket"
]
categories = ["authentication", "database", "web-programming"]
authors = [
    "MARIRS <marirs@gmail.com>",
    "HenryBee <henrybyhee@gmail.com>"
]
exclude = [
    ".gitignore",
    ".config.yml",
    "docs",
    "configs"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.13"
clap = "2.33.3"
config = "0.10.1"
chrono = { version = "0.4.19", features =["serde"] }
data-encoding = "2.3.1"
openssl = "0.10.32"
ratelimit = { path = "./ratelimit" }
r2d2 = "0.8.9"
r2d2-mongodb = "0.2.2"
rocket = { version = "0.4.10", features = ["tls"] }
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
sha2 = "0.9.2"

[badges]
travis-ci = { repository = "marirs/rocketapi" }

[[bin]]
name = "rocketapi"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
