[package]
name = "rocketapi"
version = "0.2.1"
description = "API Server with api key access and access control lists"
authors = ["Marirs <marirs@gmail.com>"]
license = "Apache-2.0 License"
categories = ["authentication", "database", "web-programming"]
keywords = [
    "api", "server", "web", "access control list", "acl", "user management",
    "api management", "mongodb", "rocket", "rust"
]
readme = "README.md"
repository = "https://github.com/marirs/rocketapi"
homepage = "https://github.com/marirs/rocketapi"
exclude = [
    ".gitignore",
    ".config.yml",
    "docs",
    "configs"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ="3.0.0-beta.2"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.11.0"
derive_more = { version = "0.99.16", features = ["deref", "display"] }
futures = "0.3.16"
mongodb = { version = "2.0.0-beta.2", default-features = false, features = ["async-std-runtime"] }
openssl = "0.10.35"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets", "tls"] }
serde = { version = "1.0.127", features = ["derive"] }
strum = { version = "0.21.0", features = ["derive"] }
thiserror = "1.0.26"
throttle = "0.1.0"
uuid = { version = "0.8.2", features = ["v5"] }

[badges]
travis-ci = { repository = "marirs/rocketapi" }

[[bin]]
name = "rocketapi"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true