[package]
name = "rocketapi"
version = "0.4.0"
description = "API Server with api key access and access control lists"
authors = ["Marirs <marirs@gmail.com>"]
license = "Apache-2.0 License"
categories = ["authentication", "database", "web-programming"]
keywords = [
    "api", "server", "web", "access control list", "acl", "user management",
    "api management", "mongodb", "rocket", "rust"
]
readme = "README.md"
repository = "https://github.com/marirs/rocketapi"
homepage = "https://github.com/marirs/rocketapi"
exclude = [
    ".gitignore",
    ".config.yml",
    "docs",
    "configs"
]
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["cargo", "derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.13.1"
derive_more = { version = "0.99.17", features = ["deref", "display"] }
futures = "0.3.21"
mongodb = { version = "2.2.1", default-features = false, features = ["async-std-runtime"] }
openssl = { version = "0.10.40", features = ["vendored"] }
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets", "tls"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1"
throttle = "0.1.0"
uuid = { version = "1.0.0", features = ["v5"] }

[badges]
travis-ci = { repository = "marirs/rocketapi" }

[[bin]]
name = "rocketapi"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true